--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,40 @@
 body {
+    font-family: 'Squada One', cursive;
+    font-size: 36px;
     background-image: url('../images/letterkenny-background.jpg');
     width: auto;
     height: auto;
+    padding-top: 2%;
+}
+
+#image {
+    margin-top: 2%;
+    padding: -2%;
+}
+
+#timer {
+    width: 27%;
+    margin-top: 1%;   
+}
+
+#result {
+    margin-top: 1%;
+    text-align: center;
+    border-radius: 5px;
+    background: white;
+    width: 25%;
+}
+
+#finalScore {
+    margin: auto;
+    margin-top: 2%;
+    padding: 33%;
+}
+
+#option0:hover,
+#option1:hover,
+#option2:hover,
+#option3:hover {
+    background: lightgreen;
+    cursor: pointer;
 }
